Fixed the issue where on iOS devices the posts would not expand/collapse

--- a/jobSalt/jobSalt/Content/features.css
+++ b/jobSalt/jobSalt/Content/features.css
@@ -112,6 +112,7 @@
 }
 
 .post {
+    cursor: pointer;
     padding: 10px; 
     border-radius: 2px;
     min-height: 80px;
